2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valabinaryexpression.vala:
	* vala/valaexpression.vala:
	* vala/valaliteral.vala:
	* vala/valamemberaccess.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodegenerator.vala:

	Treat the result of two concatenated string constants as constant,
	fixes bug 516287

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodegenerator.vala:

	Move C-specific string concatenation from semantic analyzer to
	code generator, patch by Andrea Del Signore

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_link_button_set_uri_hook binding, patch by Michael Terry,
	fixes bug 556638

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add missing sys/wait.h includes, patch by Michael Terry,
	fixes bug 556637

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-keyring-1/:

	Fix gnome_keyring_find_password_sync binding,
	patch by Michael Terry, fixes bug 556636

	* vapi/gnome-keyring-1.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_message_dialog_format_secondary_text binding,
	patch by Michael Terry, fixes bug 556625

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_tree_view_get_cursor binding, patch by Hans Vercammen,
	fixes bug 555972

	* vapi/gtk+-2.0.vapi: regenerated

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/libusb.vapi:

	Add missing [Compact], patch by Matías De la Puente,
	fixes bug 555018

2008-10-17  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_strcanon, g_object_class_install_property, GToggleNotify,
	and GStringChunk bindings, patch by Yu Feng,
	fixes part of bug 555566

2008-10-17  Roberto Majadas  <telemaco@openshine.com>

	* vapi/tracker-indexer-module-1.0.vapi: Add tracker indexer bindings

2008-10-15  Jürg Billeter  <j@bitron.ch>
