@@ -2,6 +2,16 @@
 
 	* vala/valabinaryexpression.vala:
 	* vala/valaexpression.vala:
+	* vala/valamemberaccess.vala:
+	* vala/valastringliteral.vala:
+	* gobject/valaccodegenerator.vala:
+
+	Extend non-null check when managing memory, fixes bug 530422
+
+2008-10-17  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valabinaryexpression.vala:
+	* vala/valaexpression.vala:
 	* vala/valaliteral.vala:
 	* vala/valamemberaccess.vala:
 	* vala/valasemanticanalyzer.vala:
